refactor: change array to list